Matcaps contaminated by Active Object color in Edit mode #39626

Closed
opened 2014-04-06 22:24:22 +02:00 by Timo Takala · 11 comments

System Information
Mac OS X Lion 10.7.5

Blender Version
Broken:
buildbot 2014-04-04 71a2ff1
buildbot 2014-04-06 43fb105

Worked:
buildbot 2014-03-27 7397ef8

Short description of error
I found a weird yellowish tint in Matcaps in Edit Mode. Matcap shading is ok in Object Mode and Sculpt Mode, but in Edit Mode Matcap color seems to be multiplied by Active Object color (set in User Preferences). Consequently only pure white Active Object color results in consistent matcaps in all modes.

Matcap-color-in-edit-mode.jpg

Exact steps for others to reproduce the error

  1. Open new blend file with factory settings.
  2. Optional: subdivide cube, shade smooth, just to make Matcap shading a bit cleaner.
  3. Enable Matcap shading
  4. Toggle between Sculpt, Object and Edit Modes. Object in Edit mode has a yellow cast.
  5. Go to User Preferences - Themes - 3D View. Change Active Object color to pure white.
  6. Yellow tint disappears.
**System Information** Mac OS X Lion 10.7.5 **Blender Version** Broken: buildbot 2014-04-04 71a2ff1 buildbot 2014-04-06 43fb105 Worked: buildbot 2014-03-27 7397ef8 **Short description of error** I found a weird yellowish tint in Matcaps in Edit Mode. Matcap shading is ok in Object Mode and Sculpt Mode, but in Edit Mode Matcap color seems to be multiplied by Active Object color (set in User Preferences). Consequently only pure white Active Object color results in consistent matcaps in all modes. ![Matcap-color-in-edit-mode.jpg](https://archive.blender.org/developer/F84142/Matcap-color-in-edit-mode.jpg) **Exact steps for others to reproduce the error** 1. Open new blend file with factory settings. 2. Optional: subdivide cube, shade smooth, just to make Matcap shading a bit cleaner. 3. Enable Matcap shading 4. Toggle between Sculpt, Object and Edit Modes. Object in Edit mode has a yellow cast. 5. Go to User Preferences - Themes - 3D View. Change Active Object color to pure white. 6. Yellow tint disappears.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Timo-1

Added subscriber: @Timo-1
Antonis Ryakiotakis was assigned by Campbell Barton 2014-04-07 07:51:41 +02:00

This issue was referenced by blender/blender-addons-contrib@574b0e2c30

This issue was referenced by blender/blender-addons-contrib@574b0e2c3077effcc11c9d5d45511a58acb2e5c8

This issue was referenced by 574b0e2c30

This issue was referenced by 574b0e2c3077effcc11c9d5d45511a58acb2e5c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 574b0e2c30.

Closed by commit 574b0e2c30.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

issue still present for non mesh object types. not sure its really ideal to have glColor calls all over for each? perhaps more generic matcap's drawing code should deal with it.

issue still present for non mesh object types. not sure its really ideal to have glColor calls all over for each? perhaps more generic matcap's drawing code should deal with it.

You are totally right, fixing

You are totally right, fixing

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39626
No description provided.