Fix T39626 Matcaps not working in edit mode.

Set a while color before the draw call. This will be ineffective in GLSL
but will affect matcaps.